style.css
body {
  display: flex;
  justify-content: center;
  align-items: center;

  margin: 10px;

  font-family: "Open Sans", sans-serif;
  font-size: 120%;
  color: white;
  background: url("https://source.unsplash.com/1600x900/?city");
  background-repeat: no-repeat;
  background-size: cover;
}

.card {
  background: #161616d2;
  padding: 2em;
  padding-bottom: 1em;
  border-radius: 30px;
  width: 100%;
  max-width: 430px;
  margin: 1em;
}

.suche {
  display: flex;
  align-items: center;
  justify-content: space-around;
}
button {
  padding: 0;
  margin-left: 0.5em;
  border-radius: 50%;
  border: none;
  height: 44px;
  width: 44px;
  background: #aeaeae2c;
  cursor: pointer;
  transition: 0.2s ease-in-out;
  color: white;
}

button:hover {
  background: #7c7c7c8b;
}
input.suchfeld {
  border: none;
  outline: none;
  padding: 0.4em 1em;
  border-radius: 24px;
  background: #aeaeae2c;
  font-family: inherit;
  font-size: 105%;
  width: calc(100% - 100px);
  color: white;
}
h1.temp {
  margin: 0;
}
.beschreibung {
  text-transform: capitalize;
  margin-left: 0;
  font-size: 24px;
}
.flex {
  display: flex;
  align-items: center;
}

.wetter.laden {
  visibility: hidden;
  max-height: 20px;
  position: relative;
}
.wetter.laden:after {
  visibility: visible;
  content: "Lade Wetter...";
  position: absolute;
  top: 0;
}

h3.luft {
  font-size: 19.2px;
  margin: 0;
}
.tag {
  border-radius: 8px;
  padding: 10px;
  margin: 5px 0 5px 0px;
  background-color: #7979797c;
}

h6 {
  margin-top: 10px;
}
.temp-werte {
  margin-right: 10px;
}
.minmax {
  margin-bottom: 16px;
  margin-top: 16px;
}
.vor {
  display: flex;
  align-items: center;
}
.links {
  min-width: 33%;
}

h5 {
  margin: 0;
  margin-top: 15px;
  font-size: 12px;
}
a {
  color: white;
}
.windc {
  display: flex;
  align-items: center;
}

.wind {
  margin-left: 5px;
}
.svgwind {
  display: flex;
  align-items: flex-start;
  margin: 0;
}
.feuchte {
  margin-left: 5px;
}
.prozent {
  margin: ;
}
.luft {
  margin: 5px;
}
img.icon {
  margin-left: 20px;
}
.zeit {
  margin: 0;
}
.max {
  margin-left: 5px;
}
.min {
  margin-left: 5px;
}
img {
  margin-left: 50px;
}
@media all and (max-width: 460px) {
  .beschreibung {
    font-size: 20px;
    text-align: center;
    margin-left: 20px;
    margin-top: -20px;
    margin-bottom: 20px;
  }
  body {
    margin: 2px;
  }
  .card {
    margin: 0;
  }
  .iconBeschreibung.flex {
    flex-direction: column;
  }
}

